test/expected/explain_a4v.out
explain void a[4]
             ^
14: error: array of void; did you mean array of pointer to void?
